# CS_Engine

./: .gitignore  CMakeLists.txt  CS_Engine.vcxproj  CS_Engine.vcxproj.filters  Component.cpp  Defines.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  IGame.h  IRender.h  IStart.h  LoaderParams.h  RenderManager.h  Renderer.cpp  SHOOTER.cpp  SHOOTER.h  SpriteRenderer.h  TEXT_RPG.cpp  TEXT_RPG.h  Vector2.h  imgui.ini  main.cpp  setup.bat
Src/: AppConfig.h  BoxCollider.cpp  BoxCollider.h  CSQueue.h  CSWindow.cpp  CSWindow.h  Camera.cpp  Camera.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.cpp  Collider.h  CollisionHelper.cpp  CollisionHelper.h  CollisionManager.cpp  CollisionManager.h  Component.cpp  Component.h  ComponentRegistry.cpp  ComponentRegistry.h  DX11Renderer.cpp  DX11Renderer.h  EditorCameraScript.cpp  EditorCameraScript.h  EditorUI.cpp  EditorUI.h  EditorWindow.h  GameApp.cpp  GameApp.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  GameView.cpp  GameView.h  GeometryFactory.cpp  GeometryFactory.h  GeometryGenerator.cpp  (+59 more)
Src/Assets/Scripts/: PlayerMove.cpp  PlayerMove.h  aaasdfasdfa.cpp  aaasdfasdfa.h
Src/Shaders/: Basic.hlsl
x64/Debug/: CS_Engine.exe.recipe  CS_Engine.ilk  vc145.idb
x64/Debug/CS_Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS_Engine.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
